# adativa

./: .gitignore  README.md  package-lock.json  package.json  project-overview.md
.claude/: project-overview.md
backend/: main.py  pyproject.toml
backend/.claude/: settings.local.json
backend/clients/: openai_client.py
backend/database/: content_block_skills.sql  db.py  fact_interactions.sql  schema_blocks.sql  schema_lessons.sql  schema_objectives.sql  skills_and_mapping.sql  user_lesson_skill_mastery.sql  user_objective_progress.sql  users.sql
backend/models/: schemas.py
backend/services/: content_service.py  content_skill_tagging_service.py  interaction_service.py  lesson_service.py  objective_progression_service.py  progress_service.py  rich_content_image_service.py  skill_mastery_service.py  user_service.py
frontend/: interaction_reporting_revamp.md  package-lock.json  package.json  skill_mastery.md
frontend/src/: App.tsx  interaction_reporting_revamp.md
frontend/src/app/: App.css  App.tsx  routes.tsx
frontend/src/features/auth/components/: RequireAuth.tsx
frontend/src/features/auth/hooks/: useUser.ts
frontend/src/features/content/components/: TestWrapper.tsx
frontend/src/features/content/data/: characterRegistry.ts
frontend/src/features/content/renderers/: BlockRegistry.ts  BlockRenderer.tsx
frontend/src/features/content/utils/: renderMarkdown.tsx  transformMarkdown.ts
frontend/src/features/learning/: api.ts
frontend/src/shared/GenerationLoading/: GenerationLoading.css  GenerationLoading.tsx
(+71 files in other folders)
