[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "instructor>=1.15.1",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
